--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../src/css/style.css">
-    <link rel="stylesheet" href="../src/css/bootstrap.min.css">
-    <script src="../src/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/bootstrap.min.css">
+    <script src="src/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
@@ -30,7 +30,7 @@
             <nav class="navbar navbar-expand-lg text-center navbar-transparent text-light bg-transparent">
                 <div class="container-fluid">
                     <a class="navbar-brand text-info" href="#">
-                        <img class="logo" src="../src/images/logo-1.jpg" alt="">
+                        <img class="logo" src="src/images/logo-1.jpg" alt="">
                     </a>
                     <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon text-light"></span>
@@ -78,7 +78,7 @@
             <h3 class="mt-2">
                 Face & Beauty Care <br> & <br> Your Dreadlocks Affairs
             </h3>
-            <div class="section-seperator text-center"><img src="../src/images/section-heading-separetor.png" alt=""></div>
+            <div class="section-seperator text-center"><img src="src/images/section-heading-separetor.png" alt=""></div>
 
         </div>
     </div>
@@ -86,13 +86,13 @@
     <div class="container" id="servicemenu">
         <div class="text-center mt-4">
             <h3><span>Service Menu</span></h3>
-            <div class="section-seperator text-center"><img src="../src/images/section-heading-separetor.png" alt=""></div>
+            <div class="section-seperator text-center"><img src="src/images/section-heading-separetor.png" alt=""></div>
 
         </div>
         <div class="row mt-4">
             <div class="col-md-3">
                 <div class="text-center card">
-                    <img src="../src/images/dreadlockretouch.jpg" class="rounded" alt="...">
+                    <img src="src/images/dreadlockretouch.jpg" class="rounded" alt="...">
                 </div>
                 <p>Dreadlocks Retouch</p>
             </div>
@@ -101,18 +101,18 @@
 
                 <p>Baby Locks</p>
                 <div class="text-center card">
-                    <img src="../src/images/kids.jpg" class="rounded" alt="...">
+                    <img src="src/images/kids.jpg" class="rounded" alt="...">
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="text-center card">
-                    <img src="../src/images/sticking.png" class="rounded" alt="...">
+                    <img src="src/images/sticking.png" class="rounded" alt="...">
                 </div>
                 <p>Sticking</p>
             </div>
             <div class="col-md-3">
                 <div class="text-center card">
-                    <img src="../src/images/nails-lede.jpg" class="rounded" alt="...">
+                    <img src="src/images/nails-lede.jpg" class="rounded" alt="...">
                 </div>
                 <p>Nail Art</p>
             </div>
@@ -121,12 +121,12 @@
             <div class="col-md-3 col-sm-3">
                 <p>Gel Polish</p>
                 <div class="text-center card">
-                    <img src="../src/images/gelpolish.jpg" class="rounded" alt="...">
+                    <img src="src/images/gelpolish.jpg" class="rounded" alt="...">
                 </div>
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="text-center card">
-                    <img src="../src/images/shaggyhair.jpg" class="rounded" alt="...">
+                    <img src="src/images/shaggyhair.jpg" class="rounded" alt="...">
                 </div>
                 <p>Shaggy Hair</p>
             </div>
@@ -134,12 +134,12 @@
             <div class="col-md-3 col-sm-3">
                 <p>Henna</p>
                 <div class="text-center card">
-                    <img src="../src/images/henna.jpg" class="rounded" alt="...">
+                    <img src="src/images/henna.jpg" class="rounded" alt="...">
                 </div>
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="text-center card">
-                    <img src="../src/images/haircolor.jpg" class="rounded" alt="...">
+                    <img src="src/images/haircolor.jpg" class="rounded" alt="...">
                 </div>
                 <p>Hair Colors & Artificial Locs</p>
 
@@ -156,7 +156,7 @@
     <div class="vision container" id="vision">
         <div class="row">
             <div class="col-md-5">
-                <img src="../src/images/feature_img_1.jpg" alt="">
+                <img src="src/images/feature_img_1.jpg" alt="">
             </div>
             <div class="col-md-5 mt-5 p-2">
                 <h3 class="text-center"><span>VISION</span></h3>
