--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="row container">
             <div class="col-md-4 col-sm-3">
                 <div class="card1 card">
-                    <h4>Proffessional Care</h4>
+                    <h4>Professional Care</h4>
                     <p>All products we use in our salon are professional and have proven efficiency . No compromises</p>
 
                     <div class="icon">
@@ -238,7 +238,7 @@
             </div>
         </div>
         <div class="footer text-center">
-            <p>&copy; All Rights Reserverd 2021</p>
+            <p>&copy; All Rights Reserved 2021</p>
         </div>
         <scripts>
             <!-- bootstrap scripts -->
@@ -247,14 +247,6 @@
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
         </scripts>
 </body>
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
-
-</script>
 
 </html>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
