--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="src/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="src/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
@@ -30,14 +30,14 @@
             <nav class="navbar navbar-expand-lg text-center navbar-transparent text-light bg-transparent">
                 <div class="container-fluid">
 
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon "></span>
-                  </button>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="fa fa-bars"></span>
+                    </button>
 
                     <div class="collapse navbar-collapse container mr-auto p-2" id="navbarNav">
-                      <a class="navbar-brand text-info" href="#">
-                          <img class="logo" src="src/images/logo-1.jpg" alt="">
-                      </a>
+                        <a class="navbar-brand text-info" href="#">
+                            <img class="logo" src="images/logo-1.jpg" alt="">
+                        </a>
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -80,7 +80,7 @@
             <h3 class="mt-2">
                 Face & Beauty Care <br> & <br> Your Dreadlocks Affairs
             </h3>
-            <div class="section-seperator text-center"><img src="src/images/section-heading-separetor.png" alt=""></div>
+            <div class="section-seperator text-center"><img src="images/section-heading-separetor.png" alt=""></div>
 
         </div>
     </div>
@@ -88,13 +88,13 @@
     <div class="container" id="servicemenu">
         <div class="text-center mt-4">
             <h3><span>Service Menu</span></h3>
-            <div class="section-seperator text-center"><img src="src/images/section-heading-separetor.png" alt=""></div>
+            <div class="section-seperator text-center"><img src="images/section-heading-separetor.png" alt=""></div>
 
         </div>
         <div class="row mt-4">
             <div class="col-md-3">
                 <div class="text-center card">
-                    <img src="src/images/dreadlockretouch.jpg" class="rounded" alt="...">
+                    <img src="images/dreadlockretouch.jpg" class="rounded" alt="...">
                 </div>
                 <p>Dreadlocks Retouch</p>
             </div>
@@ -103,18 +103,18 @@
 
                 <p>Baby Locks</p>
                 <div class="text-center card">
-                    <img src="src/images/kids.jpg" class="rounded" alt="...">
+                    <img src="images/kids.jpg" class="rounded" alt="...">
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="text-center card">
-                    <img src="src/images/sticking.png" class="rounded" alt="...">
+                    <img src="images/sticking.png" class="rounded" alt="...">
                 </div>
                 <p>Sticking</p>
             </div>
             <div class="col-md-3">
                 <div class="text-center card">
-                    <img src="src/images/nails-lede.jpg" class="rounded" alt="...">
+                    <img src="images/nails-lede.jpg" class="rounded" alt="...">
                 </div>
                 <p>Nail Art</p>
             </div>
@@ -123,12 +123,12 @@
             <div class="col-md-3 col-sm-3">
                 <p>Gel Polish</p>
                 <div class="text-center card">
-                    <img src="src/images/gelpolish.jpg" class="rounded" alt="...">
+                    <img src="images/gelpolish.jpg" class="rounded" alt="...">
                 </div>
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="text-center card">
-                    <img src="src/images/shaggyhair.jpg" class="rounded" alt="...">
+                    <img src="images/shaggyhair.jpg" class="rounded" alt="...">
                 </div>
                 <p>Shaggy Hair</p>
             </div>
@@ -136,12 +136,12 @@
             <div class="col-md-3 col-sm-3">
                 <p>Henna</p>
                 <div class="text-center card">
-                    <img src="src/images/henna.jpg" class="rounded" alt="...">
+                    <img src="images/henna.jpg" class="rounded" alt="...">
                 </div>
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="text-center card">
-                    <img src="src/images/haircolor.jpg" class="rounded" alt="...">
+                    <img src="images/haircolor.jpg" class="rounded" alt="...">
                 </div>
                 <p>Hair Colors & Artificial Locs</p>
 
@@ -158,7 +158,7 @@
     <div class="vision container" id="vision">
         <div class="row">
             <div class="col-md-5">
-                <img src="src/images/feature_img_1.jpg" alt="">
+                <img src="images/feature_img_1.jpg" alt="">
             </div>
             <div class="col-md-5 mt-5 p-2">
                 <h3 class="text-center"><span>VISION</span></h3>
@@ -243,12 +243,12 @@
             <p>&copy; All Rights Reserved 2021</p>
         </div>
 
-        <scripts>
-            <!-- bootstrap scripts -->
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-        </scripts>
+
+        <!-- bootstrap scripts -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
 
 </body>
 
