--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
         <div class=" text-center">
             <nav class="navbar navbar-expand-lg text-center navbar-transparent text-light bg-transparent">
                 <div class="container-fluid">
-                    <a class="navbar-brand text-info" href="#">
-                        <img class="logo" src="src/images/logo-1.jpg" alt="">
-                    </a>
-                    <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon text-light"></span>
+
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon "></span>
                   </button>
+
                     <div class="collapse navbar-collapse container mr-auto p-2" id="navbarNav">
+                      <a class="navbar-brand text-info" href="#">
+                          <img class="logo" src="src/images/logo-1.jpg" alt="">
+                      </a>
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -62,12 +64,12 @@
             </nav>
         </div>
         <div class="content text-center">
-            <h2 style="font-size:43px">MERCY LEGIT DREADLOCK CHAMBERS</h2>
-            <p class="text-center p-2 m-2 " style="font-size:40px;">Always Make Room For a<br>
+            <h2 style="font-size:38px">MERCY LEGIT DREADLOCK CHAMBERS</h2>
+            <p class="text-center p-2 m-2 " style="font-size:35px;">Always Make Room For a<br>
                 <span>Little Beauty</span> <br>in Your Life</p>
             <div>
 
-                <a href="#contact" class="btn btn-secondary"> Contact Us</a>
+                <a href="tel:0707745158" class="btn btn-secondary"> Call Us</a>
 
             </div>
         </div>
@@ -217,7 +219,7 @@
                     <a class="nav-link" href="">
                         <p>Instagram <i class="fab fa-instagram"></i></p>
                     </a>
-                    <a class="nav-link" href="">
+                    <a class="nav-link" href="tel:0707745158">
                         <p>Phone <i class="fas fa-mobile"></i></p>
                     </a>
                 </div>
@@ -240,21 +242,14 @@
         <div class="footer text-center">
             <p>&copy; All Rights Reserved 2021</p>
         </div>
+
         <scripts>
             <!-- bootstrap scripts -->
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
         </scripts>
-</body>
 
-</html>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- Option 2: Separate Popper and Bootstrap JS -->
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
