--- a/src/index.html
+++ b/src/index.html
@@ -23,44 +23,42 @@
 </head>
 
 <body>
+    <div class="body">
 
+        <div class="hero">
+            <nav class="navbar navbar-expand-lg text-center navbar-transparent  text-light bg-transparent">
+                <a class="navbar-brand text-info" href="#">
+                    <img class="logo" src="images/logo-1.jpg" alt="">
+                </a>
+                <button class="navbar-toggler text-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="fa fa-bars"></span>
+              </button>
 
-    <div class="hero">
-        <div class=" text-center">
-            <nav class="navbar navbar-expand-lg text-center navbar-transparent text-light bg-transparent">
-                <div class="container-fluid">
-
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="fa fa-bars"></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse container mr-auto p-2" id="navbarNav">
-                        <a class="navbar-brand text-info" href="#">
-                            <img class="logo" src="images/logo-1.jpg" alt="">
-                        </a>
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#servicemenu">Service Menu</a>
-                            </li>
-                            <li class="nav-item">
-                                <!-- <a class="nav-link" href="#">Pricing</a> -->
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#vision">Vision</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#philosophy">Philosophy</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#contact">Contact Us</a>
-                            </li>
-
-                        </ul>
-                    </div>
+                <div class="collapse navbarNav navbar-collapse mr-0" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#servicemenu">Service Menu</a>
+                        </li>
+                        <li class="nav-item">
+                            <!-- <a class="nav-link" href="#">Pricing</a> -->
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#vision">Vision</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#philosophy">Philosophy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact Us</a>
+                        </li>
+                    </ul>
                 </div>
+            </nav>
+
+
             </nav>
         </div>
         <div class="content text-center">
@@ -249,6 +247,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
+
+    </div>
 
 </body>
 
