back to top button

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <script src="src/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100&display=swap" rel="stylesheet">
@@ -243,10 +243,12 @@
                 </div>
             </div>
         </div>
+        <button id="topbtn" onclick="topFunction()"> <i class="fas fa-arrow-up"></i> Back to top</button>
         <div class="footer text-center">
             <p>&copy; All Rights Reserved 2021</p>
         </div>
 
+        <script src="js/index.js"></script>
 
         <!-- bootstrap scripts -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
