--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <div class="navigation" id="bg-custom">
-        <nav class="navbar navbar-expand-lg text-center navbar-dark bg-dark text-light " >
+        <nav class="navbar navbar-expand-lg text-center navbar-dark text-white bg-transparent" >
             <a class="navbar-brand text-info" href="#">
                 <img class="logo" src="images/logo-1.jpg" alt="">
             </a>
